# tg_bot_template

./: pyproject.toml
tg_bot_template/: __main__.py
tg_bot_template/.ipynb_checkpoints/: __main__-checkpoint.py
